--- a/react-app-ignition/package.json
+++ b/react-app-ignition/package.json
@@ -22,5 +22,8 @@
   "dependencies": {
     "react": "^19.2.4",
     "react-dom": "^19.2.4"
-  }
+  },
+  "browserslist":[
+    "last 10 versions of chrome"
+  ]
 }
