--- a/react-app-ignition/package.json
+++ b/react-app-ignition/package.json
@@ -14,6 +14,8 @@
   "author": "Madhavi",
   "type": "commonjs",
   "scripts": {
+    "start": "parcel index.html",
+    "build": "parcel build index.html",
     "test": "jest"
   },
   "devDependencies": {
@@ -23,7 +25,7 @@
     "react": "^19.2.4",
     "react-dom": "^19.2.4"
   },
-  "browserslist":[
+  "browserslist": [
     "last 10 versions of chrome"
   ]
 }
